--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <p>Click on a picture to view the recipe!</p>
-    <a href="recipes/smoothie.html"><img alt="Link to smoothie recipe" src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" style="object-fit: cover; width: 230px; height: 230px;"></a>
-    <a href="recipes/pizza.html"><img alt="Link to pizza recipe" src="https://images.pexels.com/photos/4109111/pexels-photo-4109111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" style="object-fit: cover; width: 230px; height: 230px;"></a>
-    <a href="recipes/pancakes.html"><img alt="Link to pancakes recipe" style="object-fit: cover; width: 230px; height: 230px;" src="https://images.pexels.com/photos/3323680/pexels-photo-3323680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
+    <a href="recipes/smoothie.html"><img alt="Link to smoothie recipe" src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
+    <a href="recipes/pizza.html"><img alt="Link to pizza recipe" src="https://images.pexels.com/photos/4109111/pexels-photo-4109111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a> 
+    <a href="recipes/pancakes.html"><img alt="Link to pancakes recipe" src="https://images.pexels.com/photos/3323680/pexels-photo-3323680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
 </body>
 </html>
