--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=GFS+Neohellenic:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p>Click on a picture to view the recipe!</p>
-    <a href="recipes/smoothie.html"><img alt="Link to smoothie recipe" src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
-    <a href="recipes/pizza.html"><img alt="Link to pizza recipe" src="https://images.pexels.com/photos/4109111/pexels-photo-4109111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a> 
-    <a href="recipes/pancakes.html"><img alt="Link to pancakes recipe" src="https://images.pexels.com/photos/3323680/pexels-photo-3323680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
+    <nav class="navbar">
+        <div class="logo"><a href="index.html"><img src="img/LKvUgs4u_400x400.png" alt="The Odin Project Logo"></a></div>
+        <p>The Odin Recipes</p>
+    </nav>
+    <div class="desc">
+        <div class="container">
+            <div class="container-left"><img src="./img/mcIUBIb6F.jpg" alt="Photo of Odin"></div>
+            <div class="contanier-right">
+                <h2>The Almighty Odin</h2>
+                <p>Odin is a really cool man. He knows how to make computers do lots of things and he also knows how to make yummy food! He has a blog where he shows pictures of the yummy things he makes and tells you how to make them too. He also teaches a class on how to make websites. You can learn how to make yummy food and learn how to make websites with Odin!</p>
+                <p>You can be really good at making food and websites with Odin's help!</p>
+            </div>
+            </div>
+    </div>
+    <div class="recipes">
+        <div class="recipes-heading"><p>Click on a picture to view the recipe!</p></div>
+        <div class="recipes-cards">
+            <a href="recipes/smoothie.html"><img alt="Link to smoothie recipe" src="https://images.pexels.com/photos/103566/pexels-photo-103566.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
+            <a href="recipes/pizza.html"><img alt="Link to pizza recipe" src="https://images.pexels.com/photos/4109111/pexels-photo-4109111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a> 
+            <a href="recipes/pancakes.html"><img alt="Link to pancakes recipe" src="https://images.pexels.com/photos/3323680/pexels-photo-3323680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"></a>
+        </div>
+    </div>
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
